--- a/com.inochi2d.inochi-session.yml
+++ b/com.inochi2d.inochi-session.yml
@@ -22,12 +22,15 @@ modules:
     buildsystem: simple
     build-options:
       append-path: /usr/lib/sdk/ldc/bin
+      env:
+        DFLAGS: '-g --d-debug'
     build-commands:
       - chmod +x ./gentl.sh; ./gentl.sh
       - dub add-path .flatpak-dub;
         dub build --skip-registry=all --config=meta;
         dub build --skip-registry=all --build=release --config=barebones --debug=InExperimental
       - install -m 755 ./out/inochi-session /app/bin/inochi-session
+      - install -m 755 ./out/cimgui.so /app/bin/cimgui.so
       # Uncomment when session translations are actually a thing. 
       #- install -Dm644 ./out/*.mo /app/bin
 
