--- a/.github/workflows/flatpak.yaml
+++ b/.github/workflows/flatpak.yaml
@@ -8,13 +8,12 @@ on:
   workflow_dispatch:
 
 env:
-  APP_ID: com.inochi2d.inochi-session
-  MANIFEST_PATH: com.inochi2d.inochi-session.yml
+  APP_ID: io.github.grillo_delmal.inochi-session
+  MANIFEST_PATH: io.github.grillo_delmal.inochi-session.yml
   FLATPAK_BUNDLE: inochi-session
-  FLATPAK_BRANCH: nightly
-  #FIXME: Change this when exporting
+  FLATPAK_BRANCH: devtest
   DESTINATION_GITHUB_USERNAME: grillo-delmal 
-  DESTINATION_REPOSITORY_NAME: inochi-session-nightly
+  DESTINATION_REPOSITORY_NAME: inochi2d-flatpak-devtest
   FLATPAK_BUILD_DIR: build-dir
   FLATPAK_BUILD_REPO: build-repo
 
@@ -89,6 +88,7 @@ jobs:
         set -e
         mkdir -p ${FLATPAK_BUILD_REPO}/{extensions,refs/{mirrors,remotes},state,tmp/cache}
         flatpak build-bundle --runtime-repo=https://flathub.org/repo/flathub.flatpakrepo ${FLATPAK_BUILD_REPO} ${FLATPAK_BUNDLE}.flatpak ${APP_ID} ${FLATPAK_BRANCH}
+        flatpak build-bundle --runtime ${FLATPAK_BUILD_REPO} ${FLATPAK_BUNDLE}.debug.flatpak ${APP_ID/-/_}.Debug ${FLATPAK_BRANCH}
 
     - name: Upload flatpak bundle
       uses: actions/upload-artifact@v1
@@ -96,8 +96,14 @@ jobs:
         name: ${{ env.FLATPAK_BUNDLE }}
         path: ${{ env.FLATPAK_BUNDLE }}.flatpak
 
+    - name: Upload flatpak bundle
+      uses: actions/upload-artifact@v1
+      with:
+        name: ${{ env.FLATPAK_BUNDLE }}.debug
+        path: ${{ env.FLATPAK_BUNDLE }}.debug.flatpak
+
   publish-oci:
-    if: github.ref == 'refs/heads/main'
+#    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: build
 
@@ -123,6 +129,10 @@ jobs:
           --oci \
           --runtime-repo=https://flathub.org/repo/flathub.flatpakrepo \
           ${FLATPAK_BUILD_REPO} ${FLATPAK_BUNDLE} ${APP_ID} ${FLATPAK_BRANCH}
+        flatpak build-bundle \
+          --oci \
+          --runtime \
+          ${FLATPAK_BUILD_REPO} ${FLATPAK_BUNDLE}.debug ${APP_ID/-/_}.Debug ${FLATPAK_BRANCH}
 
     - name: Publish OCI image
       env:
@@ -135,25 +145,46 @@ jobs:
         skopeo copy \
           oci:${FLATPAK_BUNDLE} \
           docker://ghcr.io/${IMAGE_REPOSITORY}:$FLATPAK_BRANCH
+        skopeo copy \
+          oci:${FLATPAK_BUNDLE}.debug \
+          docker://ghcr.io/${IMAGE_REPOSITORY}-debug:$FLATPAK_BRANCH
+
+  update-index:
+    runs-on: ubuntu-latest
+    needs: publish-oci
+
+    steps:
+    - run: echo "REPO_NAME=${{ github.event.repository.name }}" >> $GITHUB_ENV
 
     - name: Update static index
       env:
         REGISTRY_AUTH_FILE: /tmp/auth.json
       run: |
         export IMAGE_REPOSITORY=$(echo $GITHUB_REPOSITORY | tr '[:upper:]' '[:lower:]')
-        export DOCKER="$(skopeo inspect docker://ghcr.io/$IMAGE_REPOSITORY:$FLATPAK_BRANCH | jq --arg github_repository "$GITHUB_REPOSITORY" '. as $img | { "Name": $github_repository, "Images": [$img] }')"
-        set -e
-        git clone -b gh-pages https://github.com/$DESTINATION_GITHUB_USERNAME/$DESTINATION_REPOSITORY_NAME.git gh-pages
-        echo '{"Registry": "https://ghcr.io/","Results": []}' | jq --argjson docker "$DOCKER" '.Results += [ $docker ]' > ./gh-pages/index/static
+        set -x
+        git clone -b main https://github.com/$DESTINATION_GITHUB_USERNAME/$DESTINATION_REPOSITORY_NAME.git gh-pages
+        mkdir -p ./gh-pages/repos
+        skopeo inspect docker://ghcr.io/${IMAGE_REPOSITORY}:$FLATPAK_BRANCH | \
+          jq --arg github_repository "${GITHUB_REPOSITORY}" '. as $img | { "Name": $github_repository, "Images": [$img] }' > \
+          ./gh-pages/repos/${REPO_NAME}.o
+        [ -s ./gh-pages/repos/${REPO_NAME}.o ] && \
+          mv ./gh-pages/repos/${REPO_NAME}.o ./gh-pages/repos/${REPO_NAME} || \
+          rm ./gh-pages/repos/${REPO_NAME}.o
+        skopeo inspect docker://ghcr.io/${IMAGE_REPOSITORY}-debug:$FLATPAK_BRANCH | \
+          jq --arg github_repository "${GITHUB_REPOSITORY}-debug" '. as $img | { "Name": $github_repository, "Images": [$img] }' > \
+          ./gh-pages/repos/${REPO_NAME}-debug.o
+        [ -s ./gh-pages/repos/${REPO_NAME}-debug.o ] && \
+          mv ./gh-pages/repos/${REPO_NAME}-debug.o ./gh-pages/repos/${REPO_NAME}-debug || \
+          rm ./gh-pages/repos/${REPO_NAME}-debug.o
+        git -C ./gh-pages add .
 
     - name: Check for changes
       id: is-updated 
       run: |
         set -x
         git -C ./gh-pages status -s -uno
-        cat gh-pages/index/static
-        # Don't let the file be empty
-        [ ! -s ./gh-pages/index/static ] || [ -z "$(git -C ./gh-pages status -s -uno)" ] || echo "updated=true" >> $GITHUB_OUTPUT
+        ls ./gh-pages/repos/
+        [ -z "$(git -C ./gh-pages status -s -uno)" ] || echo "updated=true" >> $GITHUB_OUTPUT
 
     - name: Push to repository
       if: steps.is-updated.outputs.updated
@@ -166,4 +197,4 @@ jobs:
         destination-repository-name: ${{ env.DESTINATION_REPOSITORY_NAME }}
         user-email: github-actions[bot]@users.noreply.github.com
         commit-message: Update index
-        target-branch: gh-pages
+        target-branch: main
