--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch: # can be manually dispatched under GitHub's "Actions" tab 
 
 env:
-  REPO_NAME: inochi-creator-nightly
+  REPO_NAME: inochi-session-nightly
 
 jobs:
   release-check:
@@ -16,14 +16,16 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.PAT }}
 
       - name: Fix git
         run: |
           git config --global --add safe.directory /__w/${{ env.REPO_NAME }}/${{ env.REPO_NAME }}
 
-      - name: Run creator update script
+      - name: Run session update script
         run: |
-          ./update-creator.sh 
+          ./update-session.sh 
 
       - name: Install deps
         run: |
@@ -31,7 +33,7 @@ jobs:
 
       - name: Update dependencies
         run: |
-          ./update-dependencies.sh --nightly --ext-creator=latest-creator.yml
+          ./update-dependencies.sh --nightly --ext-session=latest-session.yml
 
       - name: Commit changes
         id: is-updated 
@@ -45,9 +47,4 @@ jobs:
           git config --global user.name 'Nightly Updater'
           git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
           git commit -am "Automated update"
-
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.PAT }}
-          branch: ${{ github.ref }}
+          git push origin HEAD:main
