--- a/io.github.grillo_delmal.inochi-session.yml
+++ b/io.github.grillo_delmal.inochi-session.yml
@@ -27,7 +27,7 @@ modules:
       - chmod +x ./gentl.sh; ./gentl.sh
       - dub add-path .flatpak-dub;
         dub build --skip-registry=all --config=meta;
-        dub build --skip-registry=all --build=release --config=barebones --debug=InExperimental
+        dub build --skip-registry=all --build=release --config=barebones --debug=InExperimental --override-config=facetrack-d/web-adaptors
       - install -m 755 ./out/inochi-session /app/bin/inochi-session
       - install -m 755 ./out/cimgui.so /app/bin/cimgui.so
       # Uncomment when session translations are actually a thing. 
