--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -41,6 +41,11 @@ jobs:
           git status -s -uno
           [ -z "$(git status -s -uno)" ] || echo "updated=true" >> $GITHUB_OUTPUT
 
+      - name: Update metainfo
+        if: steps.is-updated.outputs.updated
+        run: |
+          ./update-metainfo.sh
+
       - name: Commit and push to branch
         if: steps.is-updated.outputs.updated
         run: |
