--- a/.github/workflows/flatpak.yaml
+++ b/.github/workflows/flatpak.yaml
@@ -7,6 +7,9 @@ on:
       - main
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 env:
   APP_ID: io.github.grillo_delmal.inochi-session
   MANIFEST_PATH: io.github.grillo_delmal.inochi-session.yml
@@ -25,12 +28,9 @@ jobs:
       options: --privileged
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
       with:
         submodules: true
-    - name: Fix git
-      run: |
-        git config --global --add safe.directory /__w/${{ env.DESTINATION_REPOSITORY_NAME }}/${{ env.DESTINATION_REPOSITORY_NAME }}
 
     - name: Dump canonical manifest
       run: |
@@ -45,7 +45,7 @@ jobs:
         flatpak-builder --default-branch=${FLATPAK_BRANCH} --download-only /dev/null ${MANIFEST_PATH}
 
     - name: Prime cache
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: |
           .flatpak-builder/ccache
@@ -56,10 +56,10 @@ jobs:
     - name: Build flatpak
       run: |
         set -e
-        flatpak-builder --default-branch=${FLATPAK_BRANCH} --disable-updates --disable-download --ccache --sandbox --repo=${FLATPAK_BUILD_REPO} ${FLATPAK_BUILD_DIR} ${MANIFEST_PATH}
+        flatpak-builder --default-branch=${FLATPAK_BRANCH} --disable-updates --disable-download --ccache --sandbox --keep-build-dirs --repo=${FLATPAK_BUILD_REPO} ${FLATPAK_BUILD_DIR} ${MANIFEST_PATH}
 
     - name: Upload flatpak repo
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: ${{ env.FLATPAK_BUILD_REPO }}
         path: |
@@ -67,10 +67,10 @@ jobs:
           !${{ env.FLATPAK_BUILD_REPO }}/.lock
 
     - name: Upload source
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: inochi-session-source
-        path: /__w/inochi-session-nightly/inochi-session-nightly/.flatpak-builder/build/Inochi-Session-1/*
+        path: .flatpak-builder/build/Inochi-Session-Source-1/*
         retention-days: 1
 
   publish-bundle:
@@ -78,7 +78,7 @@ jobs:
     needs: build
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
 
     - name: Install flatpak
       run: |
@@ -86,9 +86,10 @@ jobs:
         sudo apt-get update && sudo apt-get -y --no-install-recommends install flatpak
 
     - name: Download flatpak repo
-      uses: actions/download-artifact@v1
+      uses: actions/download-artifact@v4
       with:
         name: ${{ env.FLATPAK_BUILD_REPO }}
+        path: ${{ env.FLATPAK_BUILD_REPO }}
 
     - name: Create flatpak bundle
       run: |
@@ -98,36 +99,76 @@ jobs:
         flatpak build-bundle --runtime ${FLATPAK_BUILD_REPO} ${FLATPAK_BUNDLE}.debug.flatpak ${APP_ID/-/_}.Debug ${FLATPAK_BRANCH}
 
     - name: Upload flatpak bundle
-      uses: actions/upload-artifact@v1
+      uses: actions/upload-artifact@v4
       with:
         name: ${{ env.FLATPAK_BUNDLE }}
         path: ${{ env.FLATPAK_BUNDLE }}.flatpak
 
     - name: Upload flatpak bundle for debug
-      uses: actions/upload-artifact@v1
+      uses: actions/upload-artifact@v4
       with:
         name: ${{ env.FLATPAK_BUNDLE }}.debug
         path: ${{ env.FLATPAK_BUNDLE }}.debug.flatpak
 
+  publish-flatpak-nightly:
+    runs-on: ubuntu-latest
+    needs: publish-bundle
+    if: github.ref == 'refs/heads/main'
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+    
+    - name: Download flatpak bundle
+      uses: actions/download-artifact@v4
+      with:
+        name: ${{ env.FLATPAK_BUNDLE }}
+        path: 'out/'
+
+    - name: Download flatpak debug bundle
+      uses: actions/download-artifact@v4
+      with:
+        name: ${{ env.FLATPAK_BUNDLE }}.debug
+        path: 'out/'
+
     - name: Release to nightly tag
-      if: github.ref == 'refs/heads/main'
-      uses: softprops/action-gh-release@v1
+      uses: softprops/action-gh-release@v2
       with:
         name: 'Unofficial Nightly Build'
         tag_name: dev-test
         files: |
-          ${{ env.FLATPAK_BUNDLE }}.flatpak
-          ${{ env.FLATPAK_BUNDLE }}.debug.flatpak
+          out/${{ env.FLATPAK_BUNDLE }}.flatpak
+          out/${{ env.FLATPAK_BUNDLE }}.debug.flatpak
+
+  publish-flatpak-test:
+    runs-on: ubuntu-latest
+    needs: publish-bundle
+    if: github.ref != 'refs/heads/main'
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+    
+    - name: Download flatpak bundle
+      uses: actions/download-artifact@v4
+      with:
+        name: ${{ env.FLATPAK_BUNDLE }}
+        path: 'out/'
+
+    - name: Download flatpak debug bundle
+      uses: actions/download-artifact@v4
+      with:
+        name: ${{ env.FLATPAK_BUNDLE }}.debug
+        path: 'out/'
 
     - name: Release to other tag
-      if: github.ref != 'refs/heads/main'
-      uses: softprops/action-gh-release@v1
+      uses: softprops/action-gh-release@v2
       with:
         name: 'Test Build'
         tag_name: dispatch
         files: |
-          ${{ env.FLATPAK_BUNDLE }}.flatpak
-          ${{ env.FLATPAK_BUNDLE }}.debug.flatpak
+          out/${{ env.FLATPAK_BUNDLE }}.flatpak
+          out/${{ env.FLATPAK_BUNDLE }}.debug.flatpak
 
   publish-oci:
     if: github.ref == 'refs/heads/main'
@@ -135,7 +176,7 @@ jobs:
     needs: build
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
 
     - name: Install flatpak and libcontainers tools
       run: |
@@ -144,9 +185,10 @@ jobs:
         sudo apt-get update && sudo apt-get -y --no-install-recommends install skopeo flatpak jq
 
     - name: Download flatpak repo
-      uses: actions/download-artifact@v1
+      uses: actions/download-artifact@v4
       with:
         name: ${{ env.FLATPAK_BUILD_REPO }}
+        path: ${{ env.FLATPAK_BUILD_REPO }}
 
     - name: Create OCI bundle
       run: |
@@ -237,15 +279,11 @@ jobs:
         
     - name: Download source
       continue-on-error: true
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: inochi-session-source
-        path: './'
+        path: '.'
       
-    - name: "Set dependencies"
-      run: |
-        dub add-path .flatpak-dub
-
     - name: 'Build Inochi Session'
       run: |
         function Invoke-VSDevEnvironment {
@@ -259,12 +297,39 @@ jobs:
               }
           }
           Invoke-VSDevEnvironment
-          
+
+          rm .dub/packages/local-packages.json
+          mv .dub/packages/local-packages.win.json .dub/packages/local-packages.json
+
+          # Set dependencies
+          dub add-path .flatpak-dub
+
           # Build metadata (like version information and icons)
           dub build --skip-registry=all --config=meta
 
           # Build the project, with its main file included, without unittests
-          dub build --skip-registry=all --build=release --config=barebones --debug=InExperimental --override-config=facetrack-d/web-adaptors
+          dub build --skip-registry=all --build=release --config=win32-nightly --debug=InExperimental
+
+    - name: Upload Zip
+      uses: actions/upload-artifact@v4
+      with:
+        name: inochi-session-win32-x86_64
+        path: 'out/'
+
+  publish-win-nightly:
+    runs-on: ubuntu-latest
+    needs: windows-zip
+    if: github.ref == 'refs/heads/main'
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+    
+    - name: Download windows files
+      uses: actions/download-artifact@v4
+      with:
+        name: inochi-session-win32-x86_64
+        path: 'out/'
 
     - name: Archive Zip
       uses: thedoctor0/zip-release@main
@@ -275,17 +340,174 @@ jobs:
         path: '*'
 
     - name: Release to nightly tag
-      if: github.ref == 'refs/heads/main'
-      uses: softprops/action-gh-release@v1
+      uses: softprops/action-gh-release@v2
       with:
         name: 'Unofficial Nightly Build'
         tag_name: dev-test
         files: 'out/inochi-session-win32-x86_64.zip'
 
+
+  publish-win-test:
+    runs-on: ubuntu-latest
+    needs: windows-zip
+    if: github.ref != 'refs/heads/main'
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+    
+    - name: Download windows files
+      uses: actions/download-artifact@v4
+      with:
+        name: inochi-session-win32-x86_64
+        path: 'out/'
+
+    - name: Archive Zip
+      uses: thedoctor0/zip-release@main
+      with:
+        type: 'zip'
+        filename: 'inochi-session-win32-x86_64.zip'
+        directory: 'out/'
+        path: '*'
+
     - name: Release to other tag
-      if: github.ref != 'refs/heads/main'
-      uses: softprops/action-gh-release@v1
+      uses: softprops/action-gh-release@v2
       with:
         name: 'Test Build'
         tag_name: dispatch
         files: 'out/inochi-session-win32-x86_64.zip'
+
+  macOS-dmg:
+    runs-on: macos-12
+    needs: build
+
+    steps:
+
+    - name: Download source
+      continue-on-error: true
+      uses: actions/download-artifact@v4
+      with:
+        name: inochi-session-source
+        path: '.'
+      
+    - uses: LunaTheFoxgirl/setup-dlang@v1
+      with:
+        compiler: ldc-latest
+  
+    - name: "Prepare for DMG packing"
+      continue-on-error: true
+      run: |
+        export HOMEBREW_NO_INSTALL_CLEANUP=1
+        brew install create-dmg gettext
+
+    - name: "Remove conflicting brew packages"
+      run: |
+        # Remove conflicting brew items
+        deps=(aom cairo composer curl fontconfig freetype gd ghostscript httpd imagemagick jpeg-xl libavif libheif libxft mongodb-community@5.0 mongosh openjpeg php r sox webp libpng brotli)
+        for dep in "${deps[@]}"; do
+          brew remove --ignore-dependencies $dep
+        done
+
+    - name: "Remove final conflicting files"
+      continue-on-error: true
+      run: |
+        # Delete fake harfbuzz if need be
+        if [ -f "/usr/local/lib/libharfbuzz.dylib" ]; then
+          sudo rm -r /usr/local/lib/libharfbuzz.dylib
+        fi
+
+        # And the .a for it as well
+        if [ -f "/usr/local/lib/libharfbuzz.a" ]; then
+          sudo rm -r /usr/local/lib/libharfbuzz.a
+        fi
+
+    - name: 'Build Inochi Session'
+      env:
+        DFLAGS: "-g -force-dwarf-frame-section=false"
+      run: |
+        # TODO: look at the propper path
+        rm .dub/packages/local-packages.json
+        mv .dub/packages/local-packages.mac.json .dub/packages/local-packages.json
+
+        # Set dependencies
+        dub add-path .flatpak-dub
+
+        # Build metadata (like version information and icons)
+        dub build --config=meta
+
+        # First build ARM64 version...
+        echo "Building arm64 binary..."
+        dub build --config=osx-nightly --arch=arm64-apple-macos
+        mv "out/Inochi Session.app/Contents/MacOS/inochi-session" "out/Inochi Session.app/Contents/MacOS/inochi-session-arm64"
+
+        # Then the X86_64 version...
+        echo "Building x86_64 binary..."
+        dub build --config=osx-nightly --arch=x86_64-apple-macos
+        mv "out/Inochi Session.app/Contents/MacOS/inochi-session" "out/Inochi Session.app/Contents/MacOS/inochi-session-x86_64"
+
+        # Glue them together with lipo
+        echo "Gluing them together..."
+        lipo "out/Inochi Session.app/Contents/MacOS/inochi-session-x86_64" "out/Inochi Session.app/Contents/MacOS/inochi-session-arm64" -output "out/Inochi Session.app/Contents/MacOS/inochi-session" -create
+
+        # Print some nice info
+        echo "Done!"
+        lipo -info "out/Inochi Session.app/Contents/MacOS/inochi-session"
+
+        # Cleanup and bundle
+        echo "Cleaning up..."
+        rm "out/Inochi Session.app/Contents/MacOS/inochi-session-x86_64" "out/Inochi Session.app/Contents/MacOS/inochi-session-arm64"
+        sh ./build-aux/osx/osxbundle.sh
+
+    - name: 'Build DMG'
+      run: |
+        sh ./build-aux/osx/gendmg.sh
+
+    - name: Upload dmg
+      uses: actions/upload-artifact@v4
+      with:
+        name: inochi-session-macos
+        path: 'out/'
+
+  publish-mac-nightly:
+    runs-on: ubuntu-latest
+    needs: macOS-dmg
+    if: github.ref == 'refs/heads/main'
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+    
+    - name: Download macos files
+      uses: actions/download-artifact@v4
+      with:
+        name: inochi-session-macos
+        path: 'out/'
+
+    - name: Release to nightly tag
+      uses: softprops/action-gh-release@v2
+      with:
+        name: 'Unofficial Nightly Build'
+        tag_name: dev-test
+        files: 'out/Install_Inochi_Session.dmg'
+
+  publish-mac-test:
+    runs-on: ubuntu-latest
+    needs: macOS-dmg
+    if: github.ref != 'refs/heads/main'
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+    
+    - name: Download macos files
+      uses: actions/download-artifact@v4
+      with:
+        name: inochi-session-macos
+        path: 'out/'
+
+    - name: Release to other tag
+      uses: softprops/action-gh-release@v2
+      with:
+        name: 'Test Build'
+        tag_name: dispatch
+        files: 'out/Install_Inochi_Session.dmg'
