--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -96,11 +96,30 @@ jobs:
         directory: 'out/'
         path: '.'
 
+    - name: 🏷️ Create/update nightly tag
+      uses: actions/github-script@v7
+      with:
+        script: |
+          github.rest.git.createRef({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            ref: 'refs/tags/nightly',
+            sha: context.sha
+          }).catch(err => {
+            if (err.status !== 422) throw err;
+            github.rest.git.updateRef({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: 'tags/nightly',
+              sha: context.sha
+            });
+          })
+
     - name: Release to nightly tag
       uses: softprops/action-gh-release@v2
       with:
         name: 'Unofficial Nightly Build'
-        tag_name: dev-test
+        tag_name: nightly
         files: 'out/inochi-session-source.zip'
 
 
@@ -127,11 +146,30 @@ jobs:
         directory: 'out/'
         path: '.'
 
+    - name: 🏷️ Create/update testing tag
+      uses: actions/github-script@v7
+      with:
+        script: |
+          github.rest.git.createRef({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            ref: 'refs/tags/testing',
+            sha: context.sha
+          }).catch(err => {
+            if (err.status !== 422) throw err;
+            github.rest.git.updateRef({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: 'tags/testing',
+              sha: context.sha
+            });
+          })
+
     - name: Release to other tag
       uses: softprops/action-gh-release@v2
       with:
         name: 'Test Build'
-        tag_name: dispatch
+        tag_name: testing
         files: 'out/inochi-session-source.zip'
 
   publish-bundle:
@@ -196,7 +234,7 @@ jobs:
       uses: softprops/action-gh-release@v2
       with:
         name: 'Unofficial Nightly Build'
-        tag_name: dev-test
+        tag_name: nightly
         files: |
           out/${{ env.FLATPAK_BUNDLE }}.flatpak
           out/${{ env.FLATPAK_BUNDLE }}.debug.flatpak
@@ -226,7 +264,7 @@ jobs:
       uses: softprops/action-gh-release@v2
       with:
         name: 'Test Build'
-        tag_name: dispatch
+        tag_name: testing
         files: |
           out/${{ env.FLATPAK_BUNDLE }}.flatpak
           out/${{ env.FLATPAK_BUNDLE }}.debug.flatpak
@@ -406,7 +444,7 @@ jobs:
       uses: softprops/action-gh-release@v2
       with:
         name: 'Unofficial Nightly Build'
-        tag_name: dev-test
+        tag_name: nightly
         files: 'out/inochi-session-win32-x86_64.zip'
 
 
@@ -437,7 +475,7 @@ jobs:
       uses: softprops/action-gh-release@v2
       with:
         name: 'Test Build'
-        tag_name: dispatch
+        tag_name: testing
         files: 'out/inochi-session-win32-x86_64.zip'
 
   macOS-dmg:
@@ -550,7 +588,7 @@ jobs:
       uses: softprops/action-gh-release@v2
       with:
         name: 'Unofficial Nightly Build'
-        tag_name: dev-test
+        tag_name: nightly
         files: 'out/Install_Inochi_Session.dmg'
 
   publish-mac-test:
@@ -572,5 +610,5 @@ jobs:
       uses: softprops/action-gh-release@v2
       with:
         name: 'Test Build'
-        tag_name: dispatch
+        tag_name: testing
         files: 'out/Install_Inochi_Session.dmg'
