--- a/.github/workflows/update.yaml
+++ b/.github/workflows/update.yaml
@@ -1,4 +1,4 @@
-name: Update nightly sources
+name: Check for updates
 
 on:
   schedule: # for scheduling to work this file must be in the default branch
@@ -15,7 +15,7 @@ jobs:
       image: bilelmoussaoui/flatpak-github-actions:freedesktop-22.08
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           token: ${{ secrets.PAT }}
 
