--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -21,7 +21,7 @@ env:
   FLATPAK_BUILD_REPO: build-repo
 
 jobs:
-  build:
+  build-base:
     runs-on: ubuntu-latest
     container:
       image: bilelmoussaoui/flatpak-github-actions:freedesktop-22.08
@@ -75,7 +75,7 @@ jobs:
 
   publish-source-nightly:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build-base
     if: github.ref == 'refs/heads/main'
 
     steps:
@@ -125,7 +125,7 @@ jobs:
 
   publish-source-test:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build-base
     if: github.ref != 'refs/heads/main'
 
     steps:
@@ -172,9 +172,9 @@ jobs:
         tag_name: testing
         files: 'out/inochi-session-source.zip'
 
-  publish-bundle:
+  publish-flatpak-bundle:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build-base
 
     steps:
     - uses: actions/checkout@v4
@@ -209,9 +209,9 @@ jobs:
         name: ${{ env.FLATPAK_BUNDLE }}.debug
         path: ${{ env.FLATPAK_BUNDLE }}.debug.flatpak
 
-  publish-flatpak-nightly:
+  publish-flatpak-bundle-nightly:
     runs-on: ubuntu-latest
-    needs: publish-bundle
+    needs: publish-flatpak-bundle
     if: github.ref == 'refs/heads/main'
 
     steps:
@@ -239,9 +239,9 @@ jobs:
           out/${{ env.FLATPAK_BUNDLE }}.flatpak
           out/${{ env.FLATPAK_BUNDLE }}.debug.flatpak
 
-  publish-flatpak-test:
+  publish-flatpak-bundle-test:
     runs-on: ubuntu-latest
-    needs: publish-bundle
+    needs: publish-flatpak-bundle
     if: github.ref != 'refs/heads/main'
 
     steps:
@@ -269,10 +269,10 @@ jobs:
           out/${{ env.FLATPAK_BUNDLE }}.flatpak
           out/${{ env.FLATPAK_BUNDLE }}.debug.flatpak
 
-  publish-oci:
+  publish-flatpak-oci:
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
-    needs: build
+    needs: build-base
 
     steps:
     - uses: actions/checkout@v4
@@ -317,9 +317,9 @@ jobs:
           oci:${FLATPAK_BUNDLE}.debug \
           docker://ghcr.io/${IMAGE_REPOSITORY}-debug:$FLATPAK_BRANCH
 
-  update-index:
+  update-flatpak-oci-index:
     runs-on: ubuntu-latest
-    needs: publish-oci
+    needs: publish-flatpak-oci
 
     steps:
     - run: echo "REPO_NAME=${{ github.event.repository.name }}" >> $GITHUB_ENV
@@ -368,8 +368,9 @@ jobs:
         target-branch: main
 
   windows-zip:
+  build-windows-zip:
     runs-on: windows-latest
-    needs: build
+    needs: build-base
 
     steps:
     - uses: dlang-community/setup-dlang@v1
@@ -411,15 +412,15 @@ jobs:
           $Env:DFLAGS = '-g'
           dub build --skip-registry=all --build=debug --config=win32-nightly --debug=InExperimental
 
-    - name: Upload Zip
+    - name: Upload Artifact
       uses: actions/upload-artifact@v4
       with:
         name: inochi-session-win32-x86_64
         path: 'out/'
 
-  publish-win-nightly:
+  publish-windows-zip-nightly:
     runs-on: ubuntu-latest
-    needs: windows-zip
+    needs: build-windows-zip
     if: github.ref == 'refs/heads/main'
 
     steps:
@@ -448,9 +449,9 @@ jobs:
         files: 'out/inochi-session-win32-x86_64.zip'
 
 
-  publish-win-test:
+  publish-windows-zip-test:
     runs-on: ubuntu-latest
-    needs: windows-zip
+    needs: build-windows-zip
     if: github.ref != 'refs/heads/main'
 
     steps:
@@ -478,12 +479,11 @@ jobs:
         tag_name: testing
         files: 'out/inochi-session-win32-x86_64.zip'
 
-  macOS-dmg:
+  build-macos-dmg:
     runs-on: macos-12
-    needs: build
+    needs: build-base
 
     steps:
-
     - name: Download source
       continue-on-error: true
       uses: actions/download-artifact@v4
@@ -526,7 +526,7 @@ jobs:
       env:
         DFLAGS: "-g -force-dwarf-frame-section=false"
       run: |
-        # TODO: look at the propper path
+        # Look at the propper paths
         rm .dub/packages/local-packages.json
         mv .dub/packages/local-packages.mac.json .dub/packages/local-packages.json
 
@@ -569,9 +569,9 @@ jobs:
         name: inochi-session-macos
         path: 'out/'
 
-  publish-mac-nightly:
+  publish-macos-dmg-nightly:
     runs-on: ubuntu-latest
-    needs: macOS-dmg
+    needs: build-macos-dmg
     if: github.ref == 'refs/heads/main'
 
     steps:
@@ -591,9 +591,9 @@ jobs:
         tag_name: nightly
         files: 'out/Install_Inochi_Session.dmg'
 
-  publish-mac-test:
+  publish-macos-dmg-test:
     runs-on: ubuntu-latest
-    needs: macOS-dmg
+    needs: build-macos-dmg
     if: github.ref != 'refs/heads/main'
 
     steps:
