Bring fixes from creator

--- a/io.github.grillo_delmal.inochi-session.yml
+++ b/io.github.grillo_delmal.inochi-session.yml
@@ -24,13 +24,13 @@ modules:
       - bash ./patches/apply_patches.sh
       # Build translations
       - mkdir otl/ ;
-        if [ -n `$(find tl/ -name "*.po" 2>/dev/null)` ] ;
+        chmod +x gentl.sh;
+        if [ $(find tl/ -name "*.po" 2>/dev/null | wc -l) == 0 ] ;
         then
-            echo "No translations, skipping...";
-        else
-            sudo chmod +x gentl.sh;
-            ./gentl.sh;
-            cp out/* otl/;
+          echo "No translations, skipping...";
+        else 
+          ./gentl.sh;
+          mv out/* otl/ ;
         fi
       - jq 'map(.path = (["D:/a/inochi-session-nightly/inochi-session-nightly"] + (.path | split("/"))[-2:] | join("/")) )' <<<$(<.dub/packages/local-packages.json) > .dub/packages/local-packages.win.json
       - jq 'map(.path = (["/Users/runner/work/inochi-session-nightly/inochi-session-nightly"] + (.path | split("/"))[-2:] | join("/")) )' <<<$(<.dub/packages/local-packages.json) > .dub/packages/local-packages.mac.json
@@ -58,13 +58,13 @@ modules:
       - bash ./patches/apply_patches.sh
       # Build translations
       - mkdir otl/ ;
-        if [ -n `$(find tl/ -name "*.po" 2>/dev/null)` ] ;
+        chmod +x gentl.sh;
+        if [ $(find tl/ -name "*.po" 2>/dev/null | wc -l) == 0 ] ;
         then
-            echo "No translations, skipping...";
-        else
-            sudo chmod +x gentl.sh;
-            ./gentl.sh;
-            cp out/* otl/;
+          echo "No translations, skipping...";
+        else 
+          ./gentl.sh;
+          mv out/* otl/ ;
         fi
       # Clean up
       - rm -rf $(find .flatpak-dub/ -maxdepth 1 -iname "i2d-imgui*")/.git/modules
