--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -579,7 +579,7 @@ jobs:
         files: 'out/inochi-session-win32-x86_64.zip'
 
   build-macos-dmg:
-    runs-on: macos-12
+    runs-on: macos-14
     needs: build-base
 
     steps:
@@ -590,7 +590,7 @@ jobs:
         name: inochi-session-source
         path: '.'
       
-    - uses: LunaTheFoxgirl/setup-dlang@v1
+    - uses: dlang-community/setup-dlang@v1.4.0
       with:
         compiler: ldc-latest
   
@@ -598,6 +598,7 @@ jobs:
       continue-on-error: true
       run: |
         export HOMEBREW_NO_INSTALL_CLEANUP=1
+        export HOMEBREW_NO_INSTALLED_DEPENDENTS_CHECK=1
         brew update
         brew install create-dmg gettext
 
@@ -605,7 +606,7 @@ jobs:
       continue-on-error: true
       run: |
         # Remove conflicting brew items
-        deps=(aom cairo composer curl fontconfig freetype gd ghostscript httpd imagemagick jpeg-xl libavif libheif libxft mongodb-community@5.0 mongosh openjpeg php r sox webp libpng brotli node@16)
+        deps=( libpng brotli harfbuzz)
         for dep in "${deps[@]}"; do
           brew remove --ignore-dependencies $dep
         done
