Remove macos deploy

--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -661,56 +661,8 @@ jobs:
         rm "out/Inochi Session.app/Contents/MacOS/inochi-session-x86_64" "out/Inochi Session.app/Contents/MacOS/inochi-session-arm64"
         sh ./build-aux/osx/osxbundle.sh
 
-    - name: 'Build DMG'
-      run: |
-        sh ./build-aux/osx/gendmg.sh
-
-    - name: Upload dmg
+    - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
         name: inochi-session-macos
         path: 'out/'
-
-  publish-macos-dmg-nightly:
-    runs-on: ubuntu-latest
-    needs: build-macos-dmg
-    if: github.ref == 'refs/heads/main'
-
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-    
-    - name: Download macos files
-      uses: actions/download-artifact@v4
-      with:
-        name: inochi-session-macos
-        path: 'out/'
-
-    - name: Release to nightly tag
-      uses: softprops/action-gh-release@v2
-      with:
-        name: 'Unofficial Nightly Build'
-        tag_name: nightly
-        files: 'out/Install_Inochi_Session.dmg'
-
-  publish-macos-dmg-test:
-    runs-on: ubuntu-latest
-    needs: build-macos-dmg
-    if: github.ref != 'refs/heads/main'
-
-    steps:
-    - name: Checkout
-      uses: actions/checkout@v4
-    
-    - name: Download macos files
-      uses: actions/download-artifact@v4
-      with:
-        name: inochi-session-macos
-        path: 'out/'
-
-    - name: Release to other tag
-      uses: softprops/action-gh-release@v2
-      with:
-        name: 'Test Build'
-        tag_name: testing
-        files: 'out/Install_Inochi_Session.dmg'
