Patch before updating dependencies

--- a/io.github.grillo_delmal.inochi-session.yml
+++ b/io.github.grillo_delmal.inochi-session.yml
@@ -21,7 +21,7 @@ modules:
     buildsystem: simple
     build-commands:
       # Apply lib patches
-      - bash ./patches/apply_patches.sh
+      - bash ./patches/apply_patches.sh .flatpak-dub .
       # Build translations
       - mkdir otl/ ;
         chmod +x gentl.sh;
@@ -55,7 +55,7 @@ modules:
         DFLAGS: '-g --d-debug'
     build-commands:
       # Apply lib patches
-      - bash ./patches/apply_patches.sh
+      - bash ./patches/apply_patches.sh .flatpak-dub .
       # Build translations
       - mkdir otl/ ;
         chmod +x gentl.sh;
