--- a/io.github.grillo_delmal.inochi-session.yml
+++ b/io.github.grillo_delmal.inochi-session.yml
@@ -71,8 +71,8 @@ modules:
       - dub add-path .flatpak-dub;
         dub build --skip-registry=all --config=meta;
         dub build --skip-registry=all --build=release --config=barebones --debug=InExperimental --override-config=facetrack-d/web-adaptors
-      - install -m 755 ./out/inochi-session /app/bin/inochi-session
-      - install -m 755 ./out/cimgui.so /app/bin/cimgui.so
+      - install -Dm 755 ./out/inochi-session /app/bin/inochi-session
+      - install -Dm 755 ./out/cimgui.so /app/bin/cimgui.so
       - dub clean --all-packages 
       # Uncomment when session translations are actually a thing. 
       #- install -Dm644 ./otl/*.mo /app/bin
