--- a/io.github.grillo_delmal.inochi-session.yml
+++ b/io.github.grillo_delmal.inochi-session.yml
@@ -7,7 +7,7 @@ sdk-extensions:
   - org.freedesktop.Sdk.Extension.llvm16
 command: inochi-session
 finish-args:
-  - --device=all          # OpenGL rendering, webcams (may be required? not sure)
+  - --device=dri          # OpenGL rendering (change for all if webcam support implemented)
   - --socket=fallback-x11
   - --share=ipc
   - --share=network       # Needed to communicate with external trackers
@@ -30,9 +30,9 @@ modules:
           ./gentl.sh;
           mv out/* otl/ ;
         fi
-      - jq 'map(.path = (["D:/a/inochi-session-nightly/inochi-session-nightly"] + (.path | split("/"))[-2:] | join("/")) )' <<<$(<.dub/packages/local-packages.json) > .dub/packages/local-packages.win.json
-      - jq 'map(.path = (["/Users/runner/work/inochi-session-nightly/inochi-session-nightly"] + (.path | split("/"))[-2:] | join("/")) )' <<<$(<.dub/packages/local-packages.json) > .dub/packages/local-packages.mac.json
-      - jq 'map(.path = (["/home/runner/work/inochi-session-nightly/inochi-session-nightly"] + (.path | split("/"))[-2:] | join("/")) )' <<<$(<.dub/packages/local-packages.json) > .dub/packages/local-packages.linux.json
+      - jq 'map(.path = (["D:/a/inochi-session-nightly/inochi-session-nightly"] + (.path | split("/"))[-4:] | join("/")) )' <<<$(<.dub/packages/local-packages.json) > .dub/packages/local-packages.win.json
+      - jq 'map(.path = (["/Users/runner/work/inochi-session-nightly/inochi-session-nightly"] + (.path | split("/"))[-4:] | join("/")) )' <<<$(<.dub/packages/local-packages.json) > .dub/packages/local-packages.mac.json
+      - jq 'map(.path = (["/home/runner/work/inochi-session-nightly/inochi-session-nightly"] + (.path | split("/"))[-4:] | join("/")) )' <<<$(<.dub/packages/local-packages.json) > .dub/packages/local-packages.linux.json
       # Clean up
       - rm -rf $(find .flatpak-dub/ -maxdepth 1 -iname "i2d-imgui*")/.git/modules
       - rm -rf $(find .flatpak-dub/ -maxdepth 1 -iname "i2d-imgui*")/deps/SDL/test
@@ -69,11 +69,13 @@ modules:
       - rm -rf $(find .flatpak-dub/ -maxdepth 1 -iname "i2d-imgui*")/deps/SDL/test
       # Build
       - dub add-path .flatpak-dub;
+        dub add-local .flatpak-dub/semver/*/semver;
+        dub add-local .flatpak-dub/gitver/*/gitver;
         dub build --skip-registry=all --config=meta;
         dub build --skip-registry=all --build=release --config=barebones --debug=InExperimental --override-config=facetrack-d/web-adaptors
       - install -Dm 755 ./out/inochi-session /app/bin/inochi-session
       - install -Dm 755 ./out/cimgui.so /app/bin/cimgui.so
-      - dub clean --all-packages 
+
       # Uncomment when session translations are actually a thing. 
       #- install -Dm644 ./otl/*.mo /app/bin
 
