Use new version step

--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -437,6 +437,7 @@ jobs:
         export DFLAGS='-g --d-debug'
 
         # Build metadata (like version information and icons)
+        dub build --skip-registry=all --config=update-version
         dub build --skip-registry=all --config=meta
 
         # Build the project, with its main file included, without unittests
@@ -549,6 +550,7 @@ jobs:
           Invoke-VSDevEnvironment
 
           # Build metadata (like version information and icons)
+        dub build --skip-registry=all --config=update-version
           dub build --skip-registry=all --config=meta
 
           # Build the project, with its main file included, without unittests
@@ -687,6 +689,7 @@ jobs:
       run: |
 
         # Build metadata (like version information and icons)
+        dub build --skip-registry=all --config=update-version
         dub build --skip-registry=all --config=meta
 
         # First build ARM64 version...
