--- a/io.github.grillo_delmal.inochi-session.yml
+++ b/io.github.grillo_delmal.inochi-session.yml
@@ -87,6 +87,7 @@ modules:
       - dub add-path .flatpak-dub;
         dub add-local .flatpak-dub/semver/*/semver;
         dub add-local .flatpak-dub/gitver/*/gitver;
+        dub build --skip-registry=all --config=update-version;
         dub build --skip-registry=all --config=meta;
         dub build --skip-registry=all --build=release --config=barebones --override-config=facetrack-d/web-adaptors
       - install -Dm 755 ./out/inochi-session /app/bin/inochi-session
