Disable windows builds until numem works

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,6 +54,8 @@ jobs:
 
   build-windows-zip:
     runs-on: windows-latest
+    # Disable for now until numem actually works
+    if: false
 
     steps:
     - uses: dlang-community/setup-dlang@v1
